 - TriX no longer allows anonymous Graph IDs
 - TriX Parser no longer parses <typedLiteral> elements incorrectly
 - Bug fix for incorrect literal escaping in some cases for all writers
 - TriG Parser no longer fails to handle string escapes correctly
 - RdfXmlWriter would fail to output some collections in some cases
 - Bug fix for incorrect rdfs:range and rdfs:domain handling in RdfsReasoner
- General Improvements
 - Improved abstraction in BaseDataset so all the active/default graph management is handlded by the 
   base class
- Parsing Improvements
 - Internal parser subsystem rewritten to use IRdfHandler
 - Improved buffering of input
 - IRdfReader expanded
  - Now has overloads for parsing to an IRdfHandler instance as well as to an IGraph instance
  - Now has overloads for parsing from any TextReader (not just StreamReader)
 - IStoreReader expanded
  - Now has overloads for parsing to an IRdfHandler instance as well as to an ITripleStore instances
  - IStoreReader implementations which accept StreamParams now also accept TextReaderParams for reading
    from any TextReader
- Query Improvements
 - Ensured proper thread safety for queries when used with appropriately implemented ISparqlDataset's so that Queries
   can never interfere with each other
 - Improved Timeout support particularly with regards to getting stuck calculating products
  - Reduced global timeout setting to 3 minutes (previously 5 minutes)
- Update Improvements
 - InMemoryDataset and SqlDataset now provide transactionality
 - LeviathanUpdateProcessor now runs each Command Set in a Transaction unless AutoCommit is set to false
- Writing Improvements
 - Various fixes and improvements to collection compression for compressing writers
 - IStoreWriter implementations which accept StreamParams now also accept TextWriterParams for writing
   to any TextWriter
- ASP.Net Improvements
 - SPARQL Update handler improvements